[gd_scene load_steps=2 format=3 uid="uid://dv2lvmrvuqeos"]

[ext_resource type="Script" uid="uid://x82ij163sg8w" path="res://scripts/main.gd" id="1_g7g4h"]

[node name="Test_Scene" type="Node2D"]
script = ExtResource("1_g7g4h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button_Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuyPremiumButton" type="Button" parent="CanvasLayer/Button_Control"]
layout_mode = 0
offset_left = 159.0
offset_top = 164.0
offset_right = 589.0
offset_bottom = 327.0

[node name="Loading_Label" type="Label" parent="CanvasLayer/Button_Control"]
layout_mode = 0
offset_left = 108.0
offset_top = 427.0
offset_right = 628.0
offset_bottom = 635.0
text = "LOADING"

[node name="Premium_Label" type="Label" parent="CanvasLayer/Button_Control"]
layout_mode = 0
offset_left = 201.0
offset_top = 704.0
offset_right = 644.0
offset_bottom = 862.0
theme_override_font_sizes/font_size = 50
text = "PREM"

[node name="Status_Label" type="Label" parent="CanvasLayer/Button_Control"]
layout_mode = 0
offset_left = 201.0
offset_top = 929.0
offset_right = 644.0
offset_bottom = 1087.0
theme_override_font_sizes/font_size = 50
text = "Status"

[node name="Button" type="Button" parent="CanvasLayer/Button_Control"]
layout_mode = 0
offset_left = 234.0
offset_top = 1084.0
offset_right = 591.0
offset_bottom = 1181.0
